# White-test

./: .gitignore  .handoff.md  README.md  config.yaml.example  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
data/: prompts.jsonl  sample_model_outputs.jsonl  sample_model_outputs_all_safe.jsonl
data/demo/: demo.json  photos.meta.json  prompts.meta.json
data/demo/attribution/: ATTRIBUTION.md  attribution.csv
data/demo_b/: ATTRIBUTION.md  attribution.csv  demo.json  photos.meta.json
data/demo_c/: ATTRIBUTION.md  attribution.csv  demo.json  photos.meta.json
data/images/: README.md  manifest.jsonl
data/model_outputs/: README.md  sample_manual_outputs.jsonl
reports/: bench_gemma3_4b_100_report.md  bench_qwen35_9b_100_real_report.md  bench_qwen35_9b_100_report.md  compare_qwen_vs_gemma.txt  example_report.md  sample_manual_outputs_report.md  smoke_qwen35_9b_report.md
scoring/: rubric.md
src/white_mushroom_test/: __init__.py  cli.py  crop_probe.py  demo_curate.py  edibility.py  generate_image_cases.py  images.py  llm.py  model_outputs.py  ollama_runner.py  reporting.py  scorer.py  verify.py  vision_probe.py
src/white_mushroom_test/streamlit_app/: __init__.py  _tab_labels.py  demo_data.py  llm_health.py  state.py
src/white_mushroom_test/streamlit_app/components/: __init__.py  header.py  image_picker.py
src/white_mushroom_test/streamlit_app/pages/: __init__.py  _edibility.py  crop.py  demo.py  edibility.py  verify.py
tests/: __init__.py  test_crop_probe.py  test_demo_data.py  test_edibility.py  test_generate_image_cases.py  test_images.py  test_llm.py  test_model_outputs.py  test_ollama_runner.py  test_reporting.py  test_scorer.py  test_streamlit_app.py  test_verify.py  test_vision_probe.py
