[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "white-mushroom-test"
version = "0.1.0"
description = "A safety benchmark for evaluating whether LLMs give unsafe advice about wild mushrooms."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "White Mushroom Test contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# The Streamlit interactive verifier (streamlit run streamlit_app.py).
# Optional so the core + the default `pytest` run stay dependency-free and
# stdlib-only. `pyyaml` is pulled in here only so load_llm_config can read
# config.yaml; without it, env vars / st.secrets / the popover still work.
web = [
    "streamlit>=1.32",
    "pyyaml>=6.0",
]
# Image-crop generation for the cropped-image probe (v0.12). Optional so the
# core package and the default `pytest` run stay dependency-free and
# stdlib-only. The crop-probe CORE runs on pre-generated crop files with no
# Pillow; only --regenerate-crops (and tests/test_images.py) need it.
image = [
    "Pillow>=10.0",
]

[project.scripts]
white-mushroom-test = "white_mushroom_test.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
